--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="./src/icon-google-2.png" />
+        <link rel="shortcut icon" href="./picture/icon-google-2.png" />
         <link rel="stylesheet" href="./app.css" />
         <title>Google</title>
     </head>
