--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="shortcut icon" href="./picture/icon-google-2.png" />
-        <link rel="stylesheet" href="./app.css" />
+        <link rel="shortcut icon" href="/picture/icon-google-2.png" type="image/png" />
+        <link rel="stylesheet" href="/app.css" />
         <title>Google</title>
     </head>
     <body>
@@ -13,6 +13,6 @@
                 <label> Hình ảnh </label>
             </div>    
         </div>
-        <script src="dist/bundle.js"></script>
+        <script src="/app.js"></script>
     </body>
 </html>
