--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <link rel="shortcut icon" href="/picture/icon-google-2.png" type="image/png" />
-        <link rel="stylesheet" href="/app.css" />
-        <title>Google</title>
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <label> Gmail </label>
-                <label> Hình ảnh </label>
-            </div>    
-        </div>
-        <script src="/app.js"></script>
-    </body>
+  <head>
+    <meta charset="UTF-8" />
+    <link
+      rel="shortcut icon"
+      href="/picture/icon-google-2.png"
+      type="image/png"
+    />
+    <link rel="stylesheet" href="/app.css" />
+    <title>Google</title>
+  </head>
+  <body>
+    <div class="container">
+      <div class="row">
+        <label> Gmail </label>
+        <label> Hình ảnh </label>
+        <svg class="grip-dot" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 48 60" enable-background="new 0 0 48 48" xml:space="preserve"><g><g><circle fill="#000000" cx="6.4" cy="6.4" r="5.9"/><g><circle fill="#000000" cx="24" cy="6.4" r="5.9"/></g><g><circle fill="#000000" cx="41.6" cy="6.4" r="5.9"/></g></g><g><circle fill="#000000" cx="6.4" cy="41.6" r="5.9"/><g><circle fill="#000000" cx="24" cy="41.6" r="5.9"/></g><g><circle fill="#000000" cx="41.6" cy="41.6" r="5.9"/></g></g><g><circle fill="#000000" cx="6.4" cy="24" r="5.9"/><g><circle fill="#000000" cx="24" cy="24" r="5.9"/></g><g><circle fill="#000000" cx="41.6" cy="24" r="5.9"/></g></g></g><text x="0" y="63" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by Creative Stall</text><text x="0" y="68" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+      </div>
+    </div>
+    <script src="/app.js"></script>
+  </body>
 </html>
